# NeuroComp

./: .gitignore  CMakeLists.txt  README.html  build_and_run.sh  decode.cpp  encode.cpp  eval.sh  readme.md  record_result.sh  run_in_wsl.bat  tested.md
runs/run_2/: CMakeLists.txt  decode.cpp  encode.cpp
runs/run_3/: CMakeLists.txt  decode.cpp  encode.cpp
runs/run_4/: CMakeLists.txt  decode.cpp  encode.cpp
runs/run_5/: CMakeLists.txt  decode.cpp  encode.cpp
runs/run_6/: decode.cpp  encode.cpp
